--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ BRIGHT_DATA_USERNAME = brd-customer-hl_9c8254e5-zone-unblocker
 BRIGHT_DATA_PASSWORD =h8gk9ddlcyl3
 
 MONGODB_URI=mongodb+srv://shippu:S85ckHM5YsUwmgZl@cluster0.yulvvuy.mongodb.net/?retryWrites=true&w=majority
+
+EMAIL_USERNAME = anmol931911@outlook.com
+
+EMAIL_PASSWORD = Anmol@123
